<resources>
    <string name="app_name">bugzilla app</string>
    <string name="product">product-</string>
    <string name="os">os-</string>
    <string name="status">status-</string>
    <string name="classification">classification-</string>
    <string name="summary">"summary : "</string>
    <string name="id">"id - "</string>
    <string name="bugs_db_name">bugs_db_name</string>
    <string name="no_bugs_today">сегодня нет багов</string>
    <string name="time">time-</string>
    <string name="set_filter">задать фильтр</string>
    <string name="no_new_bugs">Нет багов</string>
    <string name="new_bugs">Есть новые баги</string>
    <string name="bug_service_name">Проверяем наличие новых багов</string>
    <string name="close">закрыть</string>
    <string name="os_filter">Фильтр по OS:</string>
    <string name="sort_by">Сортировать по:</string>

    <string-array name="osFilter">
        <item>All</item>
        <item>Linux</item>
        <item>Android</item>
        <item>macOs</item>
        <item>Windows</item>
        <item>Unspecified</item>
    </string-array>

    <string-array name="sortBy">
        <item>По статусу</item>
        <item>По продукту</item>
        <item>По времени</item>
    </string-array>

</resources>
