<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textSize="@dimen/viewHolder_text_size" />

        <TextView
            android:id="@+id/os"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/os"
            android:textSize="@dimen/viewHolder_text_size" />
    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/viewHolder_text_size" />

        <TextView
            android:id="@+id/classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classification"
            android:textSize="@dimen/viewHolder_text_size" />
    </LinearLayout>


</LinearLayout>